syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "BestiaVisualComponentProto";


message BestiaVisualComponent {
  fixed64 entity_id = 1;
  sfixed32 bestiaId = 2;
}